[gd_scene load_steps=11 format=3 uid="uid://d1yh1io07goqj"]

[ext_resource type="Script" path="res://Scripts/mini_game/ddos/game_scene.gd" id="1_d7vuc"]
[ext_resource type="FontFile" uid="uid://db67b11v1r2hx" path="res://assets/Fonts/Minecrafter.Alt.ttf" id="2_4atyg"]
[ext_resource type="FontFile" uid="uid://ma1j7da4mhsj" path="res://assets/Fonts/pixel_lcd_7.ttf" id="3_wj87v"]
[ext_resource type="Texture2D" uid="uid://d2iw2r05sfuyh" path="res://assets/World Files/Background/Rectangle 2.png" id="4_8q4k6"]
[ext_resource type="Texture2D" uid="uid://b8s8xtwx1f50d" path="res://assets/World Files/cyberpunk-detective-props/PNG/server-gabinetes.png" id="5_e377s"]
[ext_resource type="Texture2D" uid="uid://b8s8xtwx1f50d" path="res://assets/World Files/cyberpunk-detective-props/PNG/server-gabinetes.png" id="5_l5i5y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2iirx"]
bg_color = Color(0.0986259, 0.140991, 0.245324, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pp02m"]
bg_color = Color(0.927902, 0.91368, 0.921847, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 1.0
shadow_size = 3
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ndfei"]
bg_color = Color(0.909926, 0.25326, 0.295899, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iwdsn"]
bg_color = Color(0.0980392, 0.141176, 0.247059, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gbm11"]
bg_color = Color(0.0980392, 0.141176, 0.247059, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5

[node name="ddos" type="Node2D"]
script = ExtResource("1_d7vuc")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -84.0
offset_top = -3.0
offset_right = 2816.0
offset_bottom = 1599.0
offset_left = -6.0
offset_top = -4.0
offset_right = 3642.0
offset_bottom = 1822.0
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource("4_8q4k6")
stretch_mode = 6
metadata/_edit_group_ = true

[node name="GameTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[node name="ScoreLabel" type="Label" parent="."]
z_index = 2
offset_left = 141.0
offset_top = 18.0
offset_right = 255.0
offset_bottom = 49.0
theme_override_fonts/font = ExtResource("2_4atyg")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_2iirx")
text = "Score:0"
horizontal_alignment = 1

[node name="LoadBar" type="ProgressBar" parent="."]
z_index = 2
offset_left = 1157.0
offset_top = 27.0
offset_right = 1294.0
offset_bottom = 54.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 19
theme_override_styles/background = SubResource("StyleBoxFlat_pp02m")
theme_override_styles/fill = SubResource("StyleBoxFlat_ndfei")
step = 1.0

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="TimerLabel" type="Label" parent="."]
z_index = 2
offset_left = 603.0
offset_top = 17.0
offset_right = 706.0
offset_bottom = 47.0
theme_override_fonts/font = ExtResource("3_wj87v")
theme_override_font_sizes/font_size = 21
theme_override_styles/normal = SubResource("StyleBoxFlat_iwdsn")
text = "Time:40"

[node name="CountdownTimer" type="Timer" parent="."]
autostart = true

[node name="CPULoadLabel" type="Label" parent="."]
z_index = 2
offset_left = 915.0
offset_top = 28.0
offset_right = 1128.0
offset_bottom = 56.0
theme_override_fonts/font = ExtResource("2_4atyg")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_gbm11")
text = "Server Damage:0%"

[node name="Server-gabinetes" type="Sprite2D" parent="."]
position = Vector2(213, 707)
scale = Vector2(3.49231, 2.13636)
texture = ExtResource("5_e377s")

[node name="Server-gabinetes2" type="Sprite2D" parent="."]
position = Vector2(497, 707)
scale = Vector2(3.49231, 2.13636)
texture = ExtResource("5_e377s")

[node name="Server-gabinetes3" type="Sprite2D" parent="."]
position = Vector2(786, 707)
scale = Vector2(3.49231, 2.13636)
texture = ExtResource("5_e377s")

[node name="Server-gabinetes4" type="Sprite2D" parent="."]
position = Vector2(1091, 707)
scale = Vector2(3.49231, 2.13636)
texture = ExtResource("5_e377s")
text = "Health:0%"

[node name="Server-gabinetes" type="Sprite2D" parent="."]
position = Vector2(143.25, 721.125)
scale = Vector2(2.57692, 1.92273)
texture = ExtResource("5_l5i5y")

[node name="Server-gabinetes2" type="Sprite2D" parent="."]
position = Vector2(381.25, 720.125)
scale = Vector2(2.51538, 1.88636)
texture = ExtResource("5_l5i5y")

[node name="Server-gabinetes3" type="Sprite2D" parent="."]
position = Vector2(620.25, 720.625)
scale = Vector2(2.45385, 1.90455)
texture = ExtResource("5_l5i5y")

[node name="Server-gabinetes4" type="Sprite2D" parent="."]
position = Vector2(880.25, 720.625)
scale = Vector2(2.48462, 1.90455)
texture = ExtResource("5_l5i5y")

[node name="Server-gabinetes5" type="Sprite2D" parent="."]
position = Vector2(1082, 713)
scale = Vector2(2.48462, 1.90455)
texture = ExtResource("5_l5i5y")

[node name="Server-gabinetes6" type="Sprite2D" parent="."]
position = Vector2(1276, 709)
scale = Vector2(2.48462, 1.90455)
texture = ExtResource("5_l5i5y")
